# casm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
core/: __init__.py  cpu.py  errors.py  instructions.py  memory.py  parser.py  runner.py
static/: app.js  index.html  styles.css
tests/: test_cpu.py  test_instruction_coverage.py  test_memory.py  test_parser.py  test_runner.py  test_samples.py
web/: __init__.py  app.py
