[project]
name = "casm"
version = "0.1.0"
description = "Cambridge Assembly Emulator with web integration and tracing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "core",
    "web",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
